--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,12 @@
 * {
-
+    margin: 0px;
+}
+header {
+    background-color: white;
+    padding: 10px;
+}
+body {
+    background-color: #f6f8f9;
 }
 .title {
     line-height: 40px;
@@ -16,4 +23,32 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #021732;
 }
+.buttons {
+    background-color: white;
+    padding: 10px 25px;
+    border-radius: 10px 10px 0px 0px;
+}
+.container {
+    width: 80%;
+    margin: 0 auto;
+    padding-top: 2%;
+    background-color: #f6f8f9;
 
+}
+.first-one {
+    background-color: #47adf1;
+    border: 0px;
+    border-radius: 5px;
+    padding: 5px 8px;
+    color:white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.second-one {
+    background-color: white;
+    border: 0px;
+    border-radius: 5px;
+    padding: 5px 8px;
+    color:rgb(172, 171, 171);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border: 1px solid rgb(172, 171, 171);
+}
